# ELF2-RK3588-UAV-Multimodal-Warning

./: .gitignore  LICENSE  README.md  requirements.txt
configs/: audio.example.yaml  camera.example.yaml  config.example.yaml  ptz.example.yaml  rid.example.yaml
demo/: README.md
docs/: README.md
docs/design/: README.md  README_待补.md
docs/report/: README.md
examples/: sample_log_sanitized.csv  sample_manifest_sanitized.json  sample_summary_sanitized.json
models/: README.md  best_uav_headless_i8.rknn
photos/: README.md
scripts/: export_session.sh  install_deps.sh  run_all.sh  run_audio.sh  run_qt.sh  run_rid900.sh  run_yolo.sh  status_all.sh  stop_all.sh  verify_all.sh
src/audio/: collect_raw4ch_for_yamnet.py  drone_tracker.py  test_doa.py
src/audio/audio_beamforming_detector/: README.md  __init__.py  run_offline_eval.py  run_realtime_respeaker.py
src/audio/audio_beamforming_detector/array_processing/: __init__.py  delay_sum_beamformer.py  doa_provider.py  mic_geometry.py  post_filter.py  preprocess.py  srp_phat.py
src/audio/audio_beamforming_detector/backends/: __init__.py  base_backend.py  respeaker4_backend.py  smd16_usb_backend.py
src/audio/audio_beamforming_detector/configs/: respeaker4.yaml  smd16_usb.yaml
src/common/: control_params.json
src/data_manager/: DataManager.h  create_session.sh  prepare_data_dirs.sh  session_manager.py
src/fusion/: antiuav_control_policy.py  replay_offline_control_inputs.py  simulate_audio_guidance.py
src/ptz/: main_ptz.cpp  main_ptz_zoom.cpp  simulate_tracking_zoom_control.py
src/rid/: README.md  manual_samples.txt  rid900_reader.py  test_rid900_reader.py
src/ui/qt_dashboard/: CMakeLists.txt  README_HIKVISION.md  RadarWidget.cpp  RadarWidget.h  VideoWidget.cpp  VideoWidget.h  main.cpp
src/vision/uav_hikvision_tracker_int/: CMakeLists.txt  README_HIKVISION.md  README_INT8_RAW_HEAD_CHANGES.md  bytetrack_lite.cpp  bytetrack_lite.h  diagnose_rknn_yolo11_video.py  main.cpp  rknn_api.h  test_bytetrack_lite.cpp  tracker_config.json  yolo_decoder.cpp  yolo_decoder.h
(+6 files in other folders)
